--- a/new22.html
+++ b/new22.html
@@ -346,8 +346,7 @@
 </div>
 <!--导航-end-->
 
-<div id="page">
-
+<div id="page" class="vueSwiper">
     <div class="container animate-box mid-box">
         <ul class="breadcrumb hidden-xs hidden-sm">
             <li class="animate-box"><a href="index.html">首页</a></li>
@@ -355,16 +354,20 @@
             <li class="active animate-box">新闻中心</li>
         </ul>
 
+        <!--<h3>日本ALPSTEC株式会社一行至质检公司进行技术交流</h3>
         <div class="col-md-12 text-center">
-            <h3>欧铂公司顺利通过质量管理体系</h3>
-            <img src="images/new1.png" width="80%">
-            <br>
-            <p style="text-align: left">6月25-27日，欧铂公司顺利通过质量管理体系GB/T 19001-2016/ISO
-                9001:2005的现场审核。经过后续的整体审验，7月29日，欧铂公司正式获得ISO 9001质量管理体系认证（注册号：00219Q23735ROS）。
+            <img src="images/new211.jpg">
 
-                <br>该证书的获得，是对欧铂公司在石墨烯材料领域进行开发、设计和生产能力的高度认可，提升了欧铂公司品牌知名度，为公司产品进入国际市场奠定了良好的基础，标志着欧铂公司在成为“全球石墨烯材料供应商和应用方案提供者”的道路上迈出了新的一步。
-            </p>
+            <br>
+            <p style="text-align: left">&emsp;&emsp;8月7日上午，日本ALPSTEC株式会社社长牛丸昭次、中日友好协会会员赵天刚、中国区技术总监张伟庆、市场总监澹台俊一行在东营质量协会会长孙海玻、秘书长李新安的陪同下，至质检公司进行技术交流，质检公司总经理张瑞华、质量专业经理张利、柏森实验室主任李晓华、海科公司生产计划部部长宋德超、运行三部部长魏玉海全程接待并陪同。
+                <br>&emsp;&emsp;此次技术交流，增加了质检公司对日本企业油品添加剂的了解，有利于中外质量技术交流合作。</p>
+        </div>-->
+
+        <h3>{{list.title}}</h3>
+        <div class="col-md-12 text-center">
+            <div v-html="list.detail"></div>
         </div>
+
 
         <!--底部start-->
         <div id="qbootstrap-footer" role="contentinfo">
@@ -384,47 +387,93 @@
         <!--底部end-->
 
     </div>
-    <!--返回顶部start-->
-    <div class="gototop js-top">
-        <a href="javascript:void(0);" class="js-gotop"><i class="hk">&#xe620;</i></a>
-    </div>
-    <!--返回顶部end-->
+</div>
 
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script>
-    <script src="js/sticky-kit.min.js"></script>
-    <script src="js/countTo.js"></script>
-    <script src="js/jquery.mousewheel.js"></script>
-    <script src="js/CloudCarousel.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-        $("#posterTvGrid .inner").CloudCarousel({
-            minScale: 0.1,
-            xPos: 450,//定位
-            yPos: 100,
-            buttonLeft: $('.prev1'),
-            buttonRight: $('.next1'),
-            altBox: null,
-            titleBox: null,
-            FPS: 30,//帧数
-            reflHeight: 0,//倒影高度
-            reflOpacity: 0,//倒影透明度
-            reflGap: 4,//倒影距离
-            yRadius: -80,//圆圈高度
-            xRadius: 450,//圆圈宽度
-            autoRotateDelay: 1000,
-            speed: 0.1,
-            mouseWheel: true,
-            bringToFront: false
-            //autoRotate:true
-        });
-    </script>
+<!--返回顶部start-->
+<div class="gototop js-top">
+    <a href="javascript:void(0);" class="js-gotop"><i class="hk">&#xe620;</i></a>
+</div>
+<!--返回顶部end-->
+<script src="js/vue.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
+<script src="js/sticky-kit.min.js"></script>
+<script src="js/countTo.js"></script>
+<script src="js/jquery.mousewheel.js"></script>
+<script src="js/CloudCarousel.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/main.js"></script>
+<script>
+    $("#posterTvGrid .inner").CloudCarousel({
+        minScale: 0.1,
+        xPos: 450,//定位
+        yPos: 100,
+        buttonLeft: $('.prev1'),
+        buttonRight: $('.next1'),
+        altBox: null,
+        titleBox: null,
+        FPS: 30,//帧数
+        reflHeight: 0,//倒影高度
+        reflOpacity: 0,//倒影透明度
+        reflGap: 4,//倒影距离
+        yRadius: -80,//圆圈高度
+        xRadius: 450,//圆圈宽度
+        autoRotateDelay: 1000,
+        speed: 0.1,
+        mouseWheel: true,
+        bringToFront: false
+        //autoRotate:true
+    });
 
+    //取地址栏参数
+    function getSearchString(key) {
+        // 获取URL中?之后的字符
+        var str = location.search;
+        str = str.substring(1, str.length);
+
+        // 以&分隔字符串，获得类似name=xiaoli这样的元素数组
+        var arr = str.split("&");
+        var obj = new Object();
+
+        // 将每一个数组元素以=分隔并赋给obj对象
+        for (var i = 0; i < arr.length; i++) {
+            var tmp_arr = arr[i].split("=");
+            obj[decodeURIComponent(tmp_arr[0])] = decodeURIComponent(tmp_arr[1]);
+        }
+        return obj[key];
+    }
+</script>
+<script>
+    new Vue({
+        el: '.vueSwiper',
+        data: {
+            list: '',
+            id:getSearchString('id')||''
+        },
+        mounted(){
+            this.getList()
+        },
+        methods: {
+            getList(){
+                // '/newsType/'+this.type
+                // api + "/socialOrCampusRecruitment/query/"+this.search
+                $.ajax({
+                    url: api+`/socialOrCampusRecruitment/query/${this.id}`,
+                    success: (res) => {
+                        var res = JSON.parse(res)
+                        console.log(res);
+                        this.list = res.data
+                        console.log(this.list);
+                    }
+                })
+            }
+        }
+    })
+</script>
 </body>
 
 </html>
